Moved indexTemplate setting to opensearch section and added disabled ISM policy

--- a/charts/logging-opensearch/templates/indextemplate-access.yaml
+++ b/charts/logging-opensearch/templates/indextemplate-access.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.indexTemplates.defaultTemplates.access }}
+{{- if .Values.opensearch.indexTemplates.defaultTemplates.access }}
 apiVersion: opensearch.opster.io/v1
 kind: OpensearchIndexTemplate
 metadata:
