Removed name from OpensearchRole and OpensearchUser

--- a/charts/logging-opensearch/templates/opensearch-roles.yaml
+++ b/charts/logging-opensearch/templates/opensearch-roles.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   opensearchCluster:
     name: {{ default ( include "logging-opensearch.opensearchName" $ ) ( dig "opensearchCluster" "name" "" $role ) }}
-  {{- with $role }}
+  {{- with ( $role := omit $role "name" ) }}
   {{- toYaml . | nindent 2 }}
   {{- end }}
 {{- end }}
