--- a/charts/logging-opensearch/templates/opensearch-users.yaml
+++ b/charts/logging-opensearch/templates/opensearch-users.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   opensearchCluster:
     name: {{ default ( include "logging-opensearch.opensearchName" $ ) ( dig "opensearchCluster" "name" "" $user ) }}
-  {{- with ( $user := omit $user "roles" ) }}
+  {{- with ( $user := omit $user "roles" "name" ) }}
   {{- toYaml $user | nindent 2 }}
   {{- end }}
 {{- end }}
