--- a/charts/logging-opensearch/templates/indextemplate-access.yaml
+++ b/charts/logging-opensearch/templates/indextemplate-access.yaml
@@ -3,6 +3,7 @@ apiVersion: opensearch.opster.io/v1
 kind: OpensearchIndexTemplate
 metadata:
   name: {{ include "logging-opensearch.name" . }}-access
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "logging-opensearch.labels" . | nindent 4 }}
 spec:
