--- a/charts/logging-opensearch/templates/indextemplate-additional.yaml
+++ b/charts/logging-opensearch/templates/indextemplate-additional.yaml
@@ -3,6 +3,7 @@ apiVersion: opensearch.opster.io/v1
 kind: OpensearchIndexTemplate
 metadata:
   name: {{ include "logging-opensearch.name" $ }}-{{ $template.name }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "logging-opensearch.labels" $ | nindent 4 }}
 spec:
