--- a/charts/logging-opensearch/templates/opensearch-rolebindings.yaml
+++ b/charts/logging-opensearch/templates/opensearch-rolebindings.yaml
@@ -11,6 +11,7 @@ apiVersion: opensearch.opster.io/v1
 kind: OpensearchUserRoleBinding
 metadata:
   name: {{ $role.name }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "logging-opensearch.labels" $ | nindent 4 }}
 spec:
