--- a/charts/logging-opensearch/templates/opensearch-cluster.yaml
+++ b/charts/logging-opensearch/templates/opensearch-cluster.yaml
@@ -3,7 +3,7 @@ apiVersion: opensearch.opster.io/v1
 kind: OpenSearchCluster
 metadata:
   name: {{ include "logging-opensearch.opensearchName" . }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Release.Namespace | default "logging" }}
   labels:
     {{- include "logging-opensearch.labels" . | nindent 4 }}
 spec:
