--- a/charts/logging-opensearch/templates/opensearch-rolebindings.yaml
+++ b/charts/logging-opensearch/templates/opensearch-rolebindings.yaml
@@ -11,7 +11,7 @@ apiVersion: opensearch.opster.io/v1
 kind: OpensearchUserRoleBinding
 metadata:
   name: {{ $role.name }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Release.Namespace | default "logging" }}
   labels:
     {{- include "logging-opensearch.labels" $ | nindent 4 }}
 spec:
