--- a/charts/logging-opensearch/values.yaml
+++ b/charts/logging-opensearch/values.yaml
@@ -96,6 +96,7 @@ fluentbit:
           HTTP_Passwd ${password}
           Trace_Error On
           Replace_Dots On
+          Buffer_Size 2MB
 
       [OUTPUT]
           Name opensearch
@@ -110,6 +111,7 @@ fluentbit:
           HTTP_User fluentbit
           HTTP_Passwd ${password}
           Trace_Error On
+          Buffer_Size 2MB
 
       [OUTPUT]
           Name opensearch
@@ -124,6 +126,7 @@ fluentbit:
           HTTP_User fluentbit
           HTTP_Passwd ${password}
           Trace_Error On
+          Buffer_Size 2MB
 
     customParsers: |
       [PARSER]
