--- a/charts/logging-opensearch/templates/indextemplate-container.yaml
+++ b/charts/logging-opensearch/templates/indextemplate-container.yaml
@@ -49,7 +49,7 @@ spec:
                 "ignore_above": 256
               },
               "labels": {
-                "dynamic": "false",
+                "dynamic": "true",
                 "type": "object"
               },
               "namespace_name": {
