fix(fluentbi): adjusting the backend kibana role to fix fluentbit permissions issue in opensearch

--- a/charts/logging-opensearch/values.yaml
+++ b/charts/logging-opensearch/values.yaml
@@ -180,7 +180,7 @@ opensearch:
         name: fluentbit-password
         key: password
       backendRoles:
-        - kibanauser
+        - kibana_user
       roles:
         - fluentbit
 
