feat(logging): extending the opensearch chart with kubelet, syslogs and kernel logs

--- a/charts/logging-opensearch/templates/ism-logs.yaml
+++ b/charts/logging-opensearch/templates/ism-logs.yaml
@@ -16,6 +16,9 @@ spec:
       - "container-*"
       - "audit-*"
       - "access-logs-*"
+      - syslog-logs-*
+      - kubelet-logs-*
+      - kernel-logs-*
   defaultState: hot
   states:
     - name: hot
