Added missing trigger to en-\/disable Amphora endpoints

--- a/charts/monitoring-rules/templates/endpoints-amphora.yaml
+++ b/charts/monitoring-rules/templates/endpoints-amphora.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.amphora.enabled }}
+{{ if and .Values.amphora.enabled .Values.amphora.endpoints.enabled }}
 apiVersion: v1
 kind: Endpoints
 metadata:
