Fix Amphora's ServiceMonitor template

--- a/charts/monitoring-rules/templates/servicemonitor-amphora.yaml
+++ b/charts/monitoring-rules/templates/servicemonitor-amphora.yaml
@@ -25,6 +25,7 @@ spec:
     {{- toYaml .Values.amphora.serviceMonitor.selector | nindent 4 }}
   {{- else }}
   selector:
-    app: {{ include "monitoring-rules.fullname" . }}-amphora
+    matchLabels:
+      app: {{ include "monitoring-rules.fullname" . }}-amphora
   {{- end }}
 {{ end }}
