--- a/charts/monitoring-rules/templates/configmap-grafana-dashboard-minio-replication.yaml
+++ b/charts/monitoring-rules/templates/configmap-grafana-dashboard-minio-replication.yaml
@@ -6,9 +6,8 @@ metadata:
   labels:
     grafana_dashboard: "1"
   annotations:
-    k8s-sidecar-target-directory: "/tmp/dashboards/Postgres"
+    k8s-sidecar-target-directory: "/tmp/dashboards/Minio"
 data:
-  "minio-dashboard-replication.json": |
+  minio-dashboard-replication.json: |
     {{- $.Files.Get "dashboards/minio-replication.json" | nindent 4 }}
-
-{{ end }}
+{{- end }}
