--- a/charts/monitoring-rules/templates/configmap-grafana-dashboard-trivy.yaml
+++ b/charts/monitoring-rules/templates/configmap-grafana-dashboard-trivy.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: minio-dashboard
+  name: trivy-dashboard
   labels:
     grafana_dashboard: "1"
   annotations:
-    k8s-sidecar-target-directory: "/tmp/dashboards/Postgres"
+    k8s-sidecar-target-directory: "/tmp/dashboards/Trivy"
 data:
-  "grafana-trivy-dashboard.json": |
+  grafana-trivy-dashboard.json: |
     {{- $.Files.Get "dashboards/grafana-dashboard-trivy.json" | nindent 4 }}
-{{end}}
+{{- end }}
