fix(imagepullsecret): adding imagepullsecret option in the values

--- a/charts/logging-opensearch/values.yaml
+++ b/charts/logging-opensearch/values.yaml
@@ -159,6 +159,8 @@ opensearch:
   service:
     overrideName: opensearch-cluster
 
+  imagePullSecrets: []
+
   ingress:
     enabled: false
     className: ""
