fix: corrected URL for x509Exporter

--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -346,7 +346,7 @@ x509Exporter:
   source:
     repoURL: https://charts.enix.io
     targetRevision: 3.18.1
-    chart: 
+    chart: x509-certificate-exporter
     helm:
       values: |
         secretTypes:
