--- a/charts/she-runtime/templates/prometheus.yaml
+++ b/charts/she-runtime/templates/prometheus.yaml
@@ -97,10 +97,10 @@ spec:
             ingressClassName: {{ .grafana.ingress.className }}
             enabled: true
             hosts:
-              - grafana.{{ .grafana.ingress.hosts | default grafana.ingress.hosts }}
+              - {{ .grafana.ingress.hosts | default grafana.ingress.hosts }}
             tls:
               - hosts:
-                  - grafana.{{ .grafana.ingress.hosts | default .grafana.ingress.hosts }}
+                  - .{{ .grafana.ingress.hosts | default .grafana.ingress.hosts }}
             annotations:
               nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
               nginx.ingress.kubernetes.io/backend-protocol: HTTP
